[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Hack-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Hack-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/ShowdownScene.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 2 )

[node name="ShowdownScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 122.0
custom_constants/margin_top = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer"]
margin_top = 100.0
margin_right = 800.0
margin_bottom = 122.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 304.0
margin_right = 495.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 88.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Weather:"

[node name="WeatherLabel" type="Label" parent="VBoxContainer/MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 191.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "<weather>"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 800.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 295.0
margin_top = 577.0
margin_right = 504.0
margin_bottom = 577.0
custom_constants/margin_top = -100

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/MarginContainer2"]
margin_top = -100.0
margin_right = 209.0
custom_constants/separation = 50

[node name="LogLabel" type="Label" parent="VBoxContainer/CenterContainer/MarginContainer2/VBoxContainer2"]
margin_right = 209.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Bullet Text"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/MarginContainer2/VBoxContainer2"]
visible = false
margin_top = 88.0
margin_right = 209.0
margin_bottom = 270.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourItemsButton" type="Button" parent="VBoxContainer/CenterContainer/MarginContainer2/VBoxContainer2/VBoxContainer"]
margin_right = 209.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 4 )
text = "Your Items"

[node name="EnemyItemsButton" type="Button" parent="VBoxContainer/CenterContainer/MarginContainer2/VBoxContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 209.0
margin_bottom = 86.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 4 )
text = "Enemy Items"

[node name="BattleLogButton" type="Button" parent="VBoxContainer/CenterContainer/MarginContainer2/VBoxContainer2/VBoxContainer"]
margin_top = 96.0
margin_right = 209.0
margin_bottom = 134.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 4 )
text = "Battle Log"

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/CenterContainer/MarginContainer2/VBoxContainer2/VBoxContainer"]
margin_top = 144.0
margin_right = 209.0
margin_bottom = 182.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 4 )
text = "Play Again"

[node name="PreTimer" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="timeout" from="PreTimer" to="." method="_on_PreTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
